--- a/index.html
+++ b/index.html
@@ -22,19 +22,39 @@
 
     h1 {
       color: #ff4d4d;
-      font-size: 2.5rem;
-      margin-bottom: 20px;
+      font-size: 2.2rem;
+      margin: 10px 0 12px;
       position: relative;
       z-index: 2;
       text-shadow: 0 6px 18px rgba(255, 77, 77, 0.18);
+      padding: 0 14px;
+    }
+
+    .card {
+      position: relative;
+      z-index: 2;
+      background: rgba(255,255,255,0.75);
+      backdrop-filter: blur(6px);
+      border: 1px solid rgba(255,255,255,0.6);
+      border-radius: 18px;
+      padding: 18px 18px 14px;
+      box-shadow: 0 14px 40px rgba(0,0,0,0.12);
+      max-width: 420px;
+      width: min(92vw, 420px);
+    }
+
+    .sub {
+      margin: 0 0 12px;
+      color: rgba(0,0,0,0.65);
+      font-size: 0.98rem;
+      line-height: 1.35;
     }
 
     .gif-container img {
-      max-width: 300px;
+      max-width: 260px;
+      width: 70%;
       border-radius: 15px;
-      margin-bottom: 20px;
-      position: relative;
-      z-index: 2;
+      margin: 8px 0 10px;
       box-shadow: 0 12px 35px rgba(0,0,0,0.12);
     }
 
@@ -42,19 +62,44 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 20px;
+      gap: 14px;
       flex-wrap: wrap;
       position: relative;
       z-index: 2;
+      margin-top: 6px;
     }
 
     button {
       border: none;
-      border-radius: 10px;
+      border-radius: 12px;
       cursor: pointer;
-      font-weight: bold;
-      transition: all 0.3s ease;
+      font-weight: 800;
+      transition: all 0.25s ease;
+      user-select: none;
+      -webkit-tap-highlight-color: transparent;
     }
+
+    .primary {
+      background-color: #ff4d4d;
+      color: white;
+      font-size: 1.1rem;
+      padding: 12px 18px;
+      box-shadow: 0 8px 20px rgba(255, 77, 77, 0.35);
+    }
+
+    .primary:hover { background-color: #e60000; transform: translateY(-1px); }
+    .primary:active { transform: translateY(0px) scale(0.98); }
+
+    .ghost {
+      background-color: #ffffff;
+      color: #ff4d4d;
+      font-size: 1.05rem;
+      padding: 11px 16px;
+      border: 1px solid rgba(255,77,77,0.35);
+    }
+
+    .ghost:hover { transform: translateY(-1px); }
+    .ghost:active { transform: translateY(0px) scale(0.98); }
 
     #yes-btn {
       background-color: #ff4d4d;
@@ -63,7 +108,6 @@
       padding: 15px 30px;
       box-shadow: 0 4px 15px rgba(255, 77, 77, 0.4);
     }
-
     #yes-btn:hover { background-color: #e60000; }
 
     #no-btn {
@@ -74,9 +118,12 @@
       box-shadow: 0 3px 12px rgba(0,0,0,0.10);
     }
 
+    /* Screens */
+    #game-screen { display: block; }
+    #question-screen { display: none; }
     #success-screen { display: none; }
 
-    /* Falling stuff */
+    /* Falling layer */
     .fall-layer {
       position: absolute;
       inset: 0;
@@ -84,27 +131,6 @@
       z-index: 0;
       overflow: hidden;
     }
-
-    .fall-item {
-      position: absolute;
-      top: -80px;
-      will-change: transform;
-      filter: drop-shadow(0 6px 10px rgba(0,0,0,0.12));
-      animation-name: fallDown, sway;
-      animation-timing-function: linear, ease-in-out;
-      animation-iteration-count: infinite, infinite;
-    }
-
-    @keyframes fallDown {
-      from { transform: translateY(-120px) rotate(0deg); }
-      to   { transform: translateY(calc(100vh + 180px)) rotate(360deg); }
-    }
-
-    @keyframes sway {
-      0%,100% { margin-left: 0px; }
-      50%     { margin-left: 24px; }
-    }
-
     .soft-glow {
       position: absolute;
       inset: -30%;
@@ -114,6 +140,84 @@
       z-index: 1;
       pointer-events: none;
     }
+
+    /* Game HUD */
+    .hud {
+      display: flex;
+      justify-content: space-between;
+      gap: 12px;
+      margin-top: 10px;
+      font-weight: 800;
+      color: rgba(0,0,0,0.70);
+    }
+    .pill {
+      background: rgba(255,255,255,0.75);
+      border: 1px solid rgba(255,255,255,0.65);
+      border-radius: 999px;
+      padding: 8px 12px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    /* Clickable falling items */
+    .click-item {
+      position: absolute;
+      top: -80px;
+      pointer-events: auto; /* IMPORTANT: clickable */
+      user-select: none;
+      transform: translateY(-120px);
+      filter: drop-shadow(0 6px 10px rgba(0,0,0,0.12));
+      will-change: transform;
+      cursor: pointer;
+      -webkit-tap-highlight-color: transparent;
+      animation-name: fallDown, sway;
+      animation-timing-function: linear, ease-in-out;
+      animation-iteration-count: 1, infinite; /* fall once */
+    }
+
+    @keyframes fallDown {
+      from { transform: translateY(-120px) rotate(0deg); }
+      to   { transform: translateY(calc(100vh + 200px)) rotate(360deg); }
+    }
+    @keyframes sway {
+      0%,100% { margin-left: 0px; }
+      50%     { margin-left: 26px; }
+    }
+
+    /* Toast */
+    .toast {
+      position: absolute;
+      bottom: 18px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 5;
+      background: rgba(0,0,0,0.70);
+      color: white;
+      padding: 10px 14px;
+      border-radius: 12px;
+      font-weight: 700;
+      opacity: 0;
+      transition: opacity 0.25s ease;
+      pointer-events: none;
+      max-width: min(92vw, 520px);
+    }
+    .toast.show { opacity: 1; }
+
+    /* Tiny hearts */
+    .heart-pop {
+      position: absolute;
+      z-index: 6;
+      pointer-events: none;
+      animation: pop 650ms ease-out forwards;
+      filter: drop-shadow(0 6px 10px rgba(0,0,0,0.08));
+    }
+    @keyframes pop {
+      0% { transform: translate(-50%, -50%) scale(0.6); opacity: 0; }
+      15% { opacity: 1; }
+      100% { transform: translate(-50%, -85%) scale(1.35); opacity: 0; }
+    }
   </style>
 </head>
 
@@ -121,25 +225,205 @@
   <div class="fall-layer" id="fallLayer"></div>
   <div class="soft-glow"></div>
 
-  <div id="question-screen">
+  <div class="toast" id="toast"></div>
+
+  <!-- GAME SCREEN -->
+  <div id="game-screen" class="card">
+    <h1>🍅 Tomato Catch: Level “Crush”</h1>
+    <p class="sub">
+      Quick mission: <b>tap/click 10 tomatoes</b> to unlock a very important question 😳<br>
+      🎁 = bonus points, 🎄 = “nice try” (tiny penalty)
+    </p>
+
+    <div class="gif-container">
+      <img src="https://media.tenor.com/I7KdFaOqqlcAAAAi/milk-and-mocha-bear-couple.gif" alt="Cute bear">
+    </div>
+
+    <div class="hud">
+      <div class="pill">🍅 Tomatoes: <span id="tomatoCount">0</span>/10</div>
+      <div class="pill">✨ Score: <span id="score">0</span></div>
+    </div>
+
+    <div class="buttons">
+      <button class="primary" id="startBtn" onclick="startGame()">Start</button>
+      <button class="ghost" onclick="skipGame()">Skip (only if you're evil)</button>
+    </div>
+  </div>
+
+  <!-- QUESTION SCREEN -->
+  <div id="question-screen" class="card">
+    <h1>Will you be my girlfriend? 🥺</h1>
+    <p class="sub">You already passed the tomato test… so basically you HAVE to say yes.</p>
+
     <div class="gif-container">
       <img src="https://media.tenor.com/I7KdFaOqqlcAAAAi/milk-and-mocha-bear-couple.gif" alt="Cute pleading bear">
     </div>
-    <h1>Will you be my girlfriend? 🥺</h1>
+
     <div class="buttons">
       <button id="yes-btn" onclick="sayYes()">Yes!</button>
       <button id="no-btn" onclick="sayNo()">No</button>
     </div>
   </div>
 
-  <div id="success-screen">
+  <!-- SUCCESS SCREEN -->
+  <div id="success-screen" class="card">
+    <h1>YAYYYY 😭❤️🍅</h1>
+    <p class="sub">Officially the cutest person alive. I owe you unlimited tomatoes.</p>
+
     <div class="gif-container">
       <img src="https://media.tenor.com/gUiu1zyxfzYAAAAi/bear-kiss-bear-kisses.gif" alt="Cute hugging bear">
     </div>
-    <h1>YAY! I love you! ❤️🥰</h1>
+
+    <div class="buttons">
+      <button class="primary" onclick="confettiMode()">More chaos 🍅🎄🎁</button>
+    </div>
   </div>
 
   <script>
+    // ---------- Small helpers ----------
+    const fallLayer = document.getElementById("fallLayer");
+    const toast = document.getElementById("toast");
+
+    function showToast(msg, ms = 1200) {
+      toast.textContent = msg;
+      toast.classList.add("show");
+      clearTimeout(showToast._t);
+      showToast._t = setTimeout(() => toast.classList.remove("show"), ms);
+    }
+
+    function heartPop(x, y) {
+      const el = document.createElement("div");
+      el.className = "heart-pop";
+      el.textContent = "💖";
+      el.style.left = x + "px";
+      el.style.top = y + "px";
+      el.style.position = "fixed";
+      el.style.transform = "translate(-50%, -50%)";
+      el.style.fontSize = (16 + Math.random() * 12) + "px";
+      document.body.appendChild(el);
+      setTimeout(() => el.remove(), 700);
+    }
+
+    // ---------- Game state ----------
+    let gameRunning = false;
+    let tomatoesCaught = 0;
+    let score = 0;
+    let spawner = null;
+
+    const tomatoCountEl = document.getElementById("tomatoCount");
+    const scoreEl = document.getElementById("score");
+    const startBtn = document.getElementById("startBtn");
+
+    // Weighted drops (tomatoes more common)
+    const dropTable = [
+      { char: "🍅", type: "tomato", weight: 8, points: 2 },
+      { char: "🍅", type: "tomato", weight: 8, points: 2 },
+      { char: "🍅", type: "tomato", weight: 8, points: 2 },
+      { char: "🎁", type: "gift",   weight: 3, points: 6 },
+      { char: "🎄", type: "tree",   weight: 2, points: -2 },
+      { char: "✨", type: "spark",  weight: 1, points: 3 },
+    ];
+
+    function pickWeighted(arr) {
+      const total = arr.reduce((s, x) => s + x.weight, 0);
+      let r = Math.random() * total;
+      for (const x of arr) {
+        r -= x.weight;
+        if (r <= 0) return x;
+      }
+      return arr[arr.length - 1];
+    }
+
+    function updateHUD() {
+      tomatoCountEl.textContent = tomatoesCaught;
+      scoreEl.textContent = score;
+    }
+
+    function startGame() {
+      if (gameRunning) return;
+      gameRunning = true;
+      startBtn.textContent = "Running…";
+      startBtn.disabled = true;
+      showToast("Catch 10 tomatoes to unlock the question 🍅😳");
+
+      // spawn faster on mobile too
+      spawner = setInterval(spawnDrop, 340);
+      // initial burst
+      for (let i = 0; i < 10; i++) spawnDrop();
+    }
+
+    function endGameWin() {
+      gameRunning = false;
+      clearInterval(spawner);
+      spawner = null;
+      showToast("Tomato mission complete ✅ Unlocking…", 1500);
+
+      // clear remaining drops
+      fallLayer.querySelectorAll(".click-item").forEach(el => el.remove());
+
+      setTimeout(() => {
+        document.getElementById("game-screen").style.display = "none";
+        document.getElementById("question-screen").style.display = "block";
+      }, 900);
+    }
+
+    function skipGame() {
+      showToast("Skipping… wow… okay… 😭", 1200);
+      document.getElementById("game-screen").style.display = "none";
+      document.getElementById("question-screen").style.display = "block";
+    }
+
+    function spawnDrop() {
+      // still allow a little background vibe even when not running
+      const obj = gameRunning ? pickWeighted(dropTable) : { char: "🍅", type: "bg", points: 0 };
+      const el = document.createElement("div");
+      el.className = "click-item";
+      el.textContent = obj.char;
+
+      const left = Math.random() * 100;              // vw
+      const size = 18 + Math.random() * 28;          // px
+      const durFall = 3.6 + Math.random() * 2.6;     // seconds
+      const durSway = 1.8 + Math.random() * 2.2;     // seconds
+      const delay = -(Math.random() * 0.6);
+
+      el.style.left = left + "vw";
+      el.style.fontSize = size + "px";
+      el.style.opacity = (0.35 + Math.random() * 0.55).toFixed(2);
+      el.style.animationDuration = `${durFall}s, ${durSway}s`;
+      el.style.animationDelay = `${delay}s, ${(-Math.random() * durSway).toFixed(2)}s`;
+
+      if (gameRunning) {
+        el.addEventListener("click", (e) => {
+          // score logic
+          score += obj.points;
+          if (obj.type === "tomato") tomatoesCaught += 1;
+
+          updateHUD();
+          heartPop(e.clientX, e.clientY);
+
+          // tiny feedback
+          if (obj.type === "tomato") showToast("+2 🍅 nice!", 650);
+          if (obj.type === "gift") showToast("+6 🎁 romantic bonus!", 650);
+          if (obj.type === "tree") showToast("-2 🎄 nice try lol", 650);
+
+          el.remove();
+
+          if (tomatoesCaught >= 10) endGameWin();
+        });
+      }
+
+      fallLayer.appendChild(el);
+
+      // remove after it falls
+      setTimeout(() => {
+        if (el.parentNode) el.remove();
+      }, (durFall + 0.7) * 1000);
+    }
+
+    // Make background fun even before starting
+    setInterval(() => { if (!gameRunning) spawnDrop(); }, 600);
+
+    // ---------- Your original YES/NO logic ----------
     let noClickCount = 0;
     const noTexts = [
       "No",
@@ -164,68 +448,29 @@
 
       let currentYesSize = parseFloat(window.getComputedStyle(yesBtn).fontSize);
       let currentYesPad = parseFloat(window.getComputedStyle(yesBtn).paddingTop);
-      yesBtn.style.fontSize = (currentYesSize * 1.4) + 'px';
-      yesBtn.style.padding = (currentYesPad * 1.3) + 'px ' + (currentYesPad * 2.6) + 'px';
+      yesBtn.style.fontSize = (currentYesSize * 1.35) + 'px';
+      yesBtn.style.padding = (currentYesPad * 1.25) + 'px ' + (currentYesPad * 2.5) + 'px';
 
       let currentNoSize = parseFloat(window.getComputedStyle(noBtn).fontSize);
-      noBtn.style.fontSize = (currentNoSize * 0.85) + 'px';
+      noBtn.style.fontSize = (currentNoSize * 0.82) + 'px';
 
-      if (noClickCount >= 7) noBtn.style.opacity = "0.75";
-      if (noClickCount >= 10) noBtn.style.opacity = "0.5";
+      if (noClickCount >= 5) noBtn.style.opacity = "0.75";
+      if (noClickCount >= 8) noBtn.style.opacity = "0.55";
+
+      showToast("The 'No' button is getting shy… 😭", 850);
     }
 
     function sayYes() {
       document.getElementById('question-screen').style.display = 'none';
       document.getElementById('success-screen').style.display = 'block';
+      showToast("She said YES!!! 💖💖💖", 1400);
     }
 
-    // Falling tomatoes/gifts/trees
-    const fallLayer = document.getElementById("fallLayer");
-    const items = [
-      { char: "🍅", weight: 6 },
-      { char: "🍅", weight: 6 },
-      { char: "🍅", weight: 6 },
-      { char: "🎁", weight: 3 },
-      { char: "🎄", weight: 3 },
-      { char: "✨", weight: 1 }
-    ];
-
-    function pickWeighted(arr) {
-      const total = arr.reduce((s, x) => s + x.weight, 0);
-      let r = Math.random() * total;
-      for (const x of arr) {
-        r -= x.weight;
-        if (r <= 0) return x.char;
-      }
-      return arr[arr.length - 1].char;
+    function confettiMode() {
+      showToast("Entering MAXIMUM TOMATO MODE 🍅🍅🍅", 1200);
+      // temporary faster spawn for chaos
+      for (let i = 0; i < 20; i++) spawnDrop();
     }
-
-    function spawnItem() {
-      const el = document.createElement("div");
-      el.className = "fall-item";
-      el.textContent = pickWeighted(items);
-
-      const left = Math.random() * 100;
-      const size = 18 + Math.random() * 26;
-      const durFall = 6 + Math.random() * 7;
-      const durSway = 2.2 + Math.random() * 2.8;
-      const delay = -Math.random() * durFall;
-
-      el.style.left = left + "vw";
-      el.style.fontSize = size + "px";
-      el.style.opacity = (0.25 + Math.random() * 0.55).toFixed(2);
-      el.style.animationDuration = `${durFall}s, ${durSway}s`;
-      el.style.animationDelay = `${delay}s, ${(-Math.random() * durSway).toFixed(2)}s`;
-
-      fallLayer.appendChild(el);
-
-      setTimeout(() => {
-        if (el && el.parentNode) el.parentNode.removeChild(el);
-      }, (durFall + 1) * 1000);
-    }
-
-    for (let i = 0; i < 28; i++) spawnItem();
-    setInterval(spawnItem, 220);
   </script>
 </body>
 </html>
